--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "sinon-chai": "^2.8.0"
   },
   "scripts": {
+    "build": "babel src -d bundle",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "test": "gulp test",
     "lint": "gulp lint",
